# nexusmcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: nginx.conf  sentinel.conf
nexusmcp/agents/: nexus_agent.py
nexusmcp/api/: main.py
nexusmcp/config/: settings.py
nexusmcp/integrations/: solana.py  web3.py
nexusmcp/middleware/: middleware.py
nexusmcp/models/: database.py
nexusmcp/monitoring/: analytics.py
nexusmcp/security/: auth.py  settings.py
nexusmcp/utils/: helpers.py
