[tool.poetry]
name = "nexusmcp"
version = "0.1.0"
description = "Next-Generation Solana AI Agent Platform"
authors = ["Nexus <nexusmcp@gmail.com>"]
readme = "README.md"
packages = [{include = "nexusmcp"}]
homepage = "https://nexusmcp.net"
repository = "https://github.com/nexusmcp/nexusmcp"
documentation = "https://nexusmcp.net/docs"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
solana = "^0.30.2"
solders = "^0.18.1"
anchorpy = "^0.18.0"
aiohttp = "^3.9.1"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
web3 = "^6.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3 